characters change direction -debugged